@@ -55,6 +55,7 @@ lib/SatsukiApp/form_2.pm
 # for Special Edition files
 #--------------------------------------
 theme/satsuki2/ayaka/
+theme/satsuki2-pop/akane/
 theme/satsuki2-pop/cute/
 
 
