@@ -6,4 +6,5 @@ lib/SatsukiApp/parser.pm
 js/lightbox.js
 
 theme/satsuki2/ayaka/
+theme/satsuki2-pop/akane/
 theme/satsuki2-pop/cute/
