@@ -13,10 +13,10 @@
 <$v.special_body_class = 'album'>
 <$tags = call('album/_load_tags')>
 
-<$v.regist_css  ("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
-<$v.regist_jslib("<@v.script_dir>jquery.cookie.js")>
-<$v.regist_jslib("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
-<$v.regist_js   ("<@v.script_dir>album.js")>
+<$v.regist_csslib("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
+<$v.regist_jslib ("<@v.script_dir>jquery.cookie.js")>
+<$v.regist_jslib ("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
+<$v.regist_js    ("<@v.script_dir>album.js")>
 
 
 <@call('album/_main')>
