@@ -10,8 +10,8 @@
 
 <$v.special_sidebar_module = "<@v.skel_dir>_special_sidebar">
 
-<$v.regist_css  ("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
-<$v.regist_jslib("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
+<$v.regist_csslib("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
+<$v.regist_jslib ("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
 
 <!--========================================================================-->
 <article class="system setting">
