@@ -5,9 +5,9 @@
 <@> システムモード
 <$v.system_mode("コンテンツの表示順設定")>
 
-<$v.regist_css  ("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
-<$v.regist_jslib("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
-<$v.regist_js   ("<@v.script_dir>contents-edit.js")>
+<$v.regist_csslib("<@v.script_dir>dynatree/skin/ui.dynatree.css")>
+<$v.regist_jslib ("<@v.script_dir>dynatree/jquery.dynatree.min.js")>
+<$v.regist_js    ("<@v.script_dir>contents-edit.js")>
 
 <!--========================================================================-->
 <@> 階層ツリー、初期処理
