@@ -13,6 +13,7 @@
 -【fix】サムネイル再生成時のダイアログが正しくなかった。
 -【fix】?を含むコンテンツキーの処理で問題があった
 -【fix】コンテンツ一覧画面から右クリックでリンクを開いた時、正しく開けないことがあった
+-【fix】「[http://adiary.org/devman/plugin/events:#jscss:イベントCSS]」がうまく動作していなかった
 
 *Ver3.0 RC2.1: 2015/11/29
 
